--- a/PersonalWebsite/PluralSight/TheWorld/src/TheWorld/wwwroot/css/site.css
+++ b/PersonalWebsite/PluralSight/TheWorld/src/TheWorld/wwwroot/css/site.css
@@ -4,6 +4,7 @@ body{
     font-size: 14px;
     /*cut out default margins*/
     margin: 0;
+
 }
 
 /*Find all of the elements on the page that match 'label' and style them with the following attributes*/
@@ -22,8 +23,12 @@ input[type=text], input[type=password], textarea{
 /*id's can be pointed to with a hashtag*/
 #main{
     background-color: rgb(177, 177, 177);
-    padding: 4px;
+    padding: 9px;
     margin: 0;
+}
+
+#main.trigger-main{
+   background-color: aqua;
 }
 
 #footer{
@@ -35,26 +40,30 @@ input[type=text], input[type=password], textarea{
     width: 100%;
 }
 
-
+#username{
+    color: white;
+}
 
 .headshot {
-    max-width: 100px;
-    border: 1px solid #222;
+    max-width: 237px;
+    border: 3px solid;
+    border-color: rgb(177, 177, 177);
     padding: 3px;
 }
 
 .menu {
-    font-size: 12px;
+    font-size: 30px;
+    height: 40px;
+    list-style-type: none;
+    color: white;
 }
 
-.menu li{
-    list-style-type: none;
-}
 
 /*only match to li's who have the class active, not who have an object inside of them that is active*/
-.menu li.active{
+.menu li a{
     font-weight:bold;
-    color:orange;
+    color:white;
+    font-family:'Berlin Sans FB';
 }
 
 #sidebar{
@@ -87,4 +96,7 @@ input[type=text], input[type=password], textarea{
     margin-left: 0;
     transition: margin-left ease .20s;
 }
+
+
+
 
