worked on website

--- a/PersonalWebsite/src/PersonalWebsite/Views/Home/ReachMe.cshtml
+++ b/PersonalWebsite/src/PersonalWebsite/Views/Home/ReachMe.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Reach Me";
+    ViewBag.Title = "Reach Me";
 }
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+
+<h2>You can reach me</h2>
 
 <address>
     One Microsoft Way<br />
