--- a/PersonalWebsite/src/PersonalWebsite/Views/Shared/_Layout.cshtml
+++ b/PersonalWebsite/src/PersonalWebsite/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>@ViewData["Title"] - PersonalWebsite</title>
+    <title>Varderes - @ViewBag.Title</title>
 
 
     <link rel="stylesheet" href="~/css/site.css"/>
@@ -29,7 +29,7 @@
         <li><a asp-controller="Home" asp-action="WhatIDo">What I do</a></li>
         <li><a asp-controller="Home" asp-action="WhatIWrite">What I write</a></li>
         <li><a asp-controller="Home" asp-action="WhatIveDone">What I've done</a></li>
-        <li><a asp-controller="Home" asp-action="Reach Me">Reach Me</a></li>
+        <li><a asp-controller="Home" asp-action="ReachMe">Reach Me</a></li>
     </ul>
 
 
