--- a/PersonalWebsite/src/PersonalWebsite/Views/Home/Index.cshtml
+++ b/PersonalWebsite/src/PersonalWebsite/Views/Home/Index.cshtml
@@ -2,24 +2,51 @@
     ViewBag.Title = "Home";
 }
 
-<h1>Varderes Barsegyan</h1>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Varderes - @ViewBag.Title</title>
+
+
+    <link rel="stylesheet" href="~/css/IndexDesign.css" />
+</head>
+
 
 
 <div>
-    <a href="https://github.com/Vardominator">
-        <img src="~/images/githublogo.png" />
-    </a>
+    <h3 class="shortbio">
+        I am an aspiring software developer and data scientist focused on healthcare informatics, biomedical devices, and artificial intelligence applications in health.
+    </h3>
 
-    <a href="https://www.linkedin.com/in/barsegyanvarderes">
-        <img src="~/images/linkedinlogo.png" />
-    </a>
+</div>
 
-    <a href="https://twitter.com/Varderes">
-        <img src="~/images/twitterlogo.png" />
-    </a>
+<div >
 
-    <a href="https://www.facebook.com/vardo.barsegyan">
-        <img src="~/images/facebooklogo.png" />
-    </a>
+    <ul class="socialmedia">
+        <li>
+            <a href="https://github.com/Vardominator">
+                <img src="~/images/github.png" />
+            </a>
+        </li>
+
+        <li>
+            <a href="https://www.linkedin.com/in/barsegyanvarderes">
+                <img src="~/images/linkedinlogo.png" />
+            </a>
+        </li>
+
+        <li>
+            <a href="https://twitter.com/Varderes">
+                <img src="~/images/twitterlogo.png" />
+            </a>
+        </li>
+
+        <li>
+            <a href="https://www.facebook.com/vardo.barsegyan">
+                <img src="~/images/facebooklogo.png" />
+            </a>
+        </li>
+    </ul>
 
 </div>
