added current status section

--- a/PersonalWebsite/src/PersonalWebsite/Views/Home/Index.cshtml
+++ b/PersonalWebsite/src/PersonalWebsite/Views/Home/Index.cshtml
@@ -29,9 +29,18 @@
     </div>
     <div class="row currentstatus" id="currentstatus">
         <div class="col-md-6">
-            <h2 class="text-left">test</h2>
+            <h3>Current pursuits</h3>
+            <ul>
+                <li>
+                    <h4 class="text-left">Pursuing a double master's in computer science and statistics at Cal State Long Beach</h4>
+                </li>
+                <li>
+                    <h4>Graduate research in health care analytics with Dr. Bo Fu</h4>
+                </li>
+            </ul>
         </div>
     </div>
+
 </div>
 
 
