--- a/PersonalWebsite/src/PersonalWebsite/Views/Shared/_Layout.cshtml
+++ b/PersonalWebsite/src/PersonalWebsite/Views/Shared/_Layout.cshtml
@@ -33,9 +33,9 @@
 
     <div id="wrapper">
 
-        <nav class="navbar navbar-inverse">
+        <nav id="nav" class="navbar navbar-inverse">
             <div class="container-fluid">
-                <ul class="nav navbar-nav navbar-left">
+                <ul id="menuitems" class="nav navbar-nav navbar-left">
                     <li>
                         <button id="sidebarToggle" value="Hide" class="btn btn-primary btn-sm">
                             <i class="fa fa-angle-left"></i>
@@ -48,33 +48,33 @@
                 </ul>
 
 
-                <ul class="nav navbar-nav navbar-right">
+                <ul  class="nav navbar-nav navbar-right">
 
-                    <li id="test">
+                    <li id="socialmediaitems">
                         <a href="https://github.com/Vardominator">
                             <img src="~/images/github.png" />
                         </a>
                     </li>
 
-                    <li>
+                    <li id="socialmediaitems">
                         <a href="https://www.linkedin.com/in/barsegyanvarderes">
                             <img src="~/images/linkedinlogo.png" />
                         </a>
                     </li>
 
-                    <li>
+                    <li id="socialmediaitems">
                         <a href="https://twitter.com/Varderes">
                             <img src="~/images/twitterlogo.png" />
                         </a>
                     </li>
 
-                    <li>
+                    <li id="socialmediaitems">
                         <a href="https://www.facebook.com/vardo.barsegyan">
                             <img src="~/images/facebooklogo.png" />
                         </a>
                     </li>
 
-                    <li>
+                    <li id="socialmediaitems">
                         <a href=@("https://medium.com/@Varderes")>
                             <img src="~/images/mediumlogo.png" />
                         </a>
