--- a/PersonalWebsite/src/PersonalWebsite/Views/Home/Projects.cshtml
+++ b/PersonalWebsite/src/PersonalWebsite/Views/Home/Projects.cshtml
@@ -2,4 +2,4 @@
     ViewBag.Title = "Projects";
 }
 
-<h2>I've done a lot of programming.</h2>
+<h2>This section is currently undergoing construction. My projects will soon be showcased on devpost.com</h2>
