Finalized some important things

--- a/PersonalWebsite/src/PersonalWebsite/Views/Home/Index.cshtml
+++ b/PersonalWebsite/src/PersonalWebsite/Views/Home/Index.cshtml
@@ -103,6 +103,11 @@
     </div>
 
 
+    <div id="projects" class="row">
+        <h2 id="projectssection" class="text-center">Projects</h2>
+    </div>
+
+
     <div class="twitterfeed row text-center">
         <a class="twitter-timeline" data-width="320" data-height="500" data-theme="light" href="https://twitter.com/Varderes">Tweets by Varderes</a>
         <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
