--- a/PersonalWebsite/src/PersonalWebsite/Views/Home/Index.cshtml
+++ b/PersonalWebsite/src/PersonalWebsite/Views/Home/Index.cshtml
@@ -3,7 +3,6 @@
 }
 
 @section scripts{
-    <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="~/js/index.js"></script>
 }
 
@@ -13,6 +12,8 @@
 
     <title>Varderes - @ViewBag.Title</title>
 
+
+    <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="~/js/utils.js"></script>
     <link rel="stylesheet" href="~/css/IndexDesign.css" />
     <link rel="stylesheet" href="~/css/Modal.css" />
@@ -20,57 +21,52 @@
 
 
 <div id="everything" class="grid">
+    <div id="introduction" class="row">
+        <h3 id="introtext" class="text-capitalize text-center">VARDERES</h3>
+        <h3 id="introtext" class="text-capitalize text-center">BARSEGYAN</h3>
 
+        <h5 id="introtextacademia" class="text-capitalize text-center">
+            <a id="academiclinks" href="http://www.csulb.edu/">CSU LONG BEACH</a> ◇ <a id="academiclinks" href="http://web.csulb.edu/colleges/coe/cecs/">COMP SCI</a> & <a id="academiclinks" href="http://web.csulb.edu/web/depts/math/">STATS</a>
+        </h5>s
 
-        <div id="introduction" class="row">
-            <h3 id="introtext" class="text-capitalize text-center">
-                VARDERES
-            </h3>
-            <h3 id="introtext" class="text-capitalize text-center">
-                BARSEGYAN
-            </h3>
-            <h5 id="introtextacademia" class="text-capitalize text-center">
-                <a id="academiclinks" href="http://www.csulb.edu/">CSU LONG BEACH</a> ◇ <a id="academiclinks" href="http://web.csulb.edu/colleges/coe/cecs/">COMP SCI</a> & <a id="academiclinks" href="http://web.csulb.edu/web/depts/math/">STATS</a>
-            </h5>s
+        <div class="row">
+            <ul id="socialmediamenu" class="socialmedia nav text-center">
 
-            <div class="row">
-                <ul id="socialmediamenu" class="socialmedia nav text-center">
+                <li id="socialmediaitems">
+                    <a href="https://github.com/Vardominator">
+                        <img src="~/images/github.png" />
+                    </a>
+                </li>
 
-                    <li id="socialmediaitems">
-                        <a href="https://github.com/Vardominator">
-                            <img src="~/images/github.png" />
-                        </a>
-                    </li>
+                <li id="socialmediaitems">
+                    <a href="https://www.linkedin.com/in/barsegyanvarderes">
+                        <img src="~/images/linkedinlogo.png" />
+                    </a>
+                </li>
 
-                    <li id="socialmediaitems">
-                        <a href="https://www.linkedin.com/in/barsegyanvarderes">
-                            <img src="~/images/linkedinlogo.png" />
-                        </a>
-                    </li>
+                <li id="socialmediaitems">
+                    <a href="#twitterModal">
+                        <img src="~/images/twitterlogo.png" />
+                    </a>
+                </li>
 
-                    <li id="socialmediaitems">
-                        <a href="https://twitter.com/Varderes">
-                            <img src="~/images/twitterlogo.png" />
-                        </a>
-                    </li>
+                <li id="socialmediaitems">
+                    <a href="https://www.facebook.com/vardo.barsegyan">
+                        <img src="~/images/facebooklogo.png" />
+                    </a>
+                </li>
 
-                    <li id="socialmediaitems">
-                        <a href="https://www.facebook.com/vardo.barsegyan">
-                            <img src="~/images/facebooklogo.png" />
-                        </a>
-                    </li>
+                <li id="socialmediaitems">
+                    <a href=@("https://medium.com/@Varderes")>
+                        <img src="~/images/mediumlogo.png" />
+                    </a>
+                </li>
 
-                    <li id="socialmediaitems">
-                        <a href=@("https://medium.com/@Varderes")>
-                            <img src="~/images/mediumlogo.png" />
-                        </a>
-                    </li>
+            </ul>
+        </div>
 
-                </ul>
-
-            </div>
-
-            <div id="mainmenu" class="row">
+        <div id="mainmenu" class="row">
+            <div class="col-xs-4 col-xs-offset-4 col-md-2 col-md-offset-5">
                 <ul id="menuitems" class="text-center">
 
                     <!--
@@ -81,46 +77,54 @@
                     </li>
                     -->
                     <li id="menutext"><a href="#bioModal">About</a></li>
-                    <li id="menutext"><a asp-controller="Home" asp-action="Projects">Projects</a></li>
+                    <li id="menutext"><a href="#projectsModal">Projects</a></li> @* asp-controller="Home" asp-action="Projects"*@
                     <li id="menutext"><a href=@("https://medium.com/@Varderes")>Blog</a></li>
                     <li id="menutext"><a href="~/assets/Resume.txt" download="VarderesResume.txt" type="text/plain">Résumé</a></li> @*asp-controller="Home" asp-action="Resume"*@
-                    <li id="menutext"><a href="javascript:copyTextToClipboard('varderes@gmail.com')" >Contact</a></li> @* asp-controller="Home" asp-action="Contact"*@
+                    <li id="menutext"><a href="javascript:copyTextToClipboard('varderes@gmail.com')">Contact</a></li> @* asp-controller="Home" asp-action="Contact"*@
 
                 </ul>
             </div>
-            <div id="bioModal" class="modalDialog">
-                <div>
-                    <a href="#close" title="Close" class="close">X</a>
-                    <h2>Biography</h2>
-                    <p>This is a sample modal box that can be created using the powers of CSS3.</p>
-                    <p>You could do a lot of things here like have a pop-up ad that shows when your website loads, or create a login/register form for users.</p>
+            <div class="col-xs-3 col-md-1 copiedTextArea">
+                <ul id="menuitems" class="text-center">
+                    <li id="menutext"><a style="visibility: hidden">r</a></li>
+                    <li id="menutext"><a style="visibility: hidden">r</a></li>
+                    <li id="menutext"><a style="visibility: hidden">r</a></li>
+                    <li id="menutext"><a style="visibility: hidden">r</a></li>
+                    <span id="copiedText">Copied</span>
+                </ul>
+            </div>
+        </div>
+        <div id="bioModal" class="modalDialog">
+            <div>
+                <a href="#close" title="Close" class="close">X</a>
+                <div id="aboutme" class="row">
+                    <h2 id="aboutsection" class="text-center">About</h2>
+                    <img id="mainphoto" src="~/images/photo.jpg" class="center-block" />
+                    <h4 id="greetingtext" class="text-center">
+                        Hello. Thank you for visiting.  I am a graduate student in computer science and statistics. My focus is in healthcare informatics, particularly using artificial intellgience to better understand our health.  <i>This website is currently just a landing page, but more will be coming soon. Stay tuned!</i>
+                    </h4>
                 </div>
             </div>
-
         </div>
 
-
-
-
-
-    <div id="aboutme" class="row">
-        <h2 id="aboutsection" class="text-center">About</h2>
-        <img id="mainphoto" src="~/images/photo.jpg" class="center-block" />
-        <h4 id="greetingtext" class="text-center">
-            Hello. Thank you for visiting.  I am a graduate student in computer science and statistics. My focus is in healthcare informatics, particularly using artificial intellgience to better understand our health.  <i>This website is currently just a landing page, but more will be coming soon. Stay tuned!</i>
-        </h4>
     </div>
 
-
-    <div id="projects" class="row">
-        <h2 id="projectssection" class="text-center">Projects</h2>
+    <div id="projectsModal" class="modalDialog">
+        <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <div id="projects" class="row">
+                <h2 id="projectssection" class="text-center">Projects</h2>
+            </div>
+        </div>
     </div>
-
-
-    <div class="twitterfeed row text-center">
-        <a class="twitter-timeline" data-width="320" data-height="500" data-theme="light" href="https://twitter.com/Varderes">Tweets by Varderes</a>
-        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+    <div id="twitterModal" class="modalDialog">
+        <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <div class="twitterfeed row text-center">
+                <a class="twitter-timeline" data-width="320" data-height="500" data-theme="light" href="https://twitter.com/Varderes">Tweets by Varderes</a>
+                <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+        </div>
     </div>
 
 
