--- a/PersonalWebsite/src/PersonalWebsite/wwwroot/css/IndexDesign.css
+++ b/PersonalWebsite/src/PersonalWebsite/wwwroot/css/IndexDesign.css
@@ -69,14 +69,37 @@
 }
 
 #menuitems li a{
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
     font-size: 24px;
     font-family: 'Facile Sans';
     color: white;
+    text-decoration: none;
 }
 
 #menuitems li a:hover{
-    text-decoration: none;
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
     color: gray;
+}
+
+.copiedTextArea {
+    height: 100%;
+}
+
+#copiedText{
+    text-align:center;
+    position: absolute;
+    left: -20%;
+    padding: 20px;
+    font-size: 15px;
+    font-family: 'Facile Sans';
+    color: aliceblue;
+    padding: 5px;
 }
 
 #aboutsection{
