--- a/PersonalWebsite/src/PersonalWebsite/Views/Home/Index.cshtml
+++ b/PersonalWebsite/src/PersonalWebsite/Views/Home/Index.cshtml
@@ -90,7 +90,7 @@
                     <li id="menutext"><a style="visibility: hidden">r</a></li>
                     <li id="menutext"><a style="visibility: hidden">r</a></li>
                     <li id="menutext"><a style="visibility: hidden">r</a></li>
-                    <span id="copiedText">Copied</span>
+                    <span id="copiedText">Email Copied</span>
                 </ul>
             </div>
         </div>
